# django-migrations-ci

./: .coveragerc  .gitignore  LICENSE  README.md  manage.py  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: example-test.yml  python-package.yml  python-publish.yml
django_migrations_ci/: conf.py  django.py  exceptions.py  pytest_plugin.py  settings.py  shell.py
django_migrations_ci/backends/: mysql.py  postgresql.py  sqlite.py  sqlite3.py
django_migrations_ci/backends/postgresql/: __init__.py  shell.py
django_migrations_ci/management/commands/: clone_test_db.py  migrateci.py  setup_test_db.py
django_migrations_ci/tests/: conftest.py  dump_mysql.sql  dump_postgresql.sql  dump_sqlite.sql  test_clone_database.py  test_django.py  test_migrateci_command.py  test_setup_database.py  test_shell.py
django_migrations_ci/tests/dump/0001/: mysql.sql  postgresql.sql
django_migrations_ci/tests/postgresql/: conftest.py  postgres_dump.sql  test_migrateci_command.py  utils.py
django_migrations_ci/tests/sqlite3/: test_migrateci_command.py
django_migrations_ci/tests/testapp/: settings.py  settings_mysql.py  settings_postgresql.py
django_migrations_ci/tests/testapp/migrations/: 0001_initial.py  0002_auto_20221020_1343.py  0002_create_bus.py
example/: manage.py  pytest.ini  requirements.txt
example/app/: models.py  tests.py
example/app/migrations/: 0001_initial.py
example/example/: migrateci_storage.py  settings.py
tests/: conftest.py  test_django.py  test_migrateci_command.py  test_pytest_plugin.py  test_shell.py
tests/dump/0001/: mysql.sql  sqlite.sql
tests/dump/0002/: mysql.sql  postgresql.sql
tests/testapp/: models.py  settings.py  settings_postgresql.py  settings_sqlite.py
tests/testapp/migrations/: 0001_initial.py  0002_create_bus.py
