[tool.poetry]
name = "django-migrations-ci"
version = "0.0.0"
description = "Django migrations CI optimization"
authors = ["Iuri de Silvio <iurisilvio@gmail.com>"]
readme = "README.md"
packages = [{include = "django_migrations_ci"}]
classifiers = [ "Development Status :: 4 - Beta", "Intended Audience :: Developers", "Operating System :: OS Independent", "Framework :: Django", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only", "Topic :: Software Development :: Libraries :: Python Modules",]

[tool.poetry.urls]
Homepage = "https://github.com/iurisilvio/django-migrations-ci"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.dependencies]
python = "^3.7"
django = "^3 || ^4"

[tool.poetry.group.dev.dependencies]
flake8 = "<5"
flake8-bugbear = "^23.1.20"
mysqlclient = "^2.1.1"
psycopg2 = "^2.9.5"
pytest = "^7.2.0"
pytest-black = "^0.3.12"
pytest-cov = "^4.0.0"
pytest-flake8 = "^1.1.1"
pytest-isort = "^3.1.0"
pytest-mock = "^3.10.0"

[tool.poetry-dynamic-versioning]
enable = true

[tool.pytest.ini_options]
addopts = "-s --black --flake8 --cov=django_migrations_ci --cov-report term --cov-report xml"

[tool.coverage.run]
branch = true
concurrency = ["multiprocessing"]
parallel = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = true
