[tool.poetry]
name = "django-migrations-ci"
version = "0.0.0"
description = "Django migrations CI optimization"
authors = ["Iuri de Silvio <iurisilvio@gmail.com>"]
readme = "README.md"
packages = [{include = "django_migrations_ci"}]
classifiers = [ "Development Status :: 4 - Beta", "Intended Audience :: Developers", "Operating System :: OS Independent", "Framework :: Django", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only", "Topic :: Software Development :: Libraries :: Python Modules",]

[tool.poetry.urls]
Homepage = "https://github.com/businho/django-migrations-ci"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4 || ^5"

[tool.poetry.group.dev.dependencies]
mysqlclient = "^2.1.1"
psycopg2 = "^2.9.5"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"

[tool.poetry-dynamic-versioning]
enable = true

[tool.pytest.ini_options]
addopts = "--capture=no --cov=django_migrations_ci --cov-report term --cov-report xml"

[tool.poetry.plugins]
pytest11 = { migrateci = "django_migrations_ci.pytest_plugin" }

[tool.coverage.run]
branch = true
concurrency = ["multiprocessing"]
parallel = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = true
