[metadata]
name = django_migrations_ci
version = 0.0.1
url = https://github.com/iurisilvio/django-migrations-ci
author = Iuri de Silvio
author_email = iurisilvio@gmail.com
description = Django migrations CI optimization
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
    Framework :: Django
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules

[tool:pytest]
python_files = tests.py test_*.py *_tests.py

[flake8]
max-line-length = 88

[aliases]
test=pytest
