[metadata]
name = django_migrations_ci
version = 0.0.4
url = https://github.com/iurisilvio/django-migrations-ci
author = Iuri de Silvio
author_email = iurisilvio@gmail.com
description = Django migrations CI optimization
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
    Framework :: Django
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules

[options]
install_requires =
    django
setup_requires =
    pytest-runner
tests_require =
    flake8<5
    flake8-bugbear
    psycopg2
    pytest
    pytest-black
    pytest-cov
    pytest-flake8
    pytest-mock

[tool:pytest]
addopts = --black --flake8 --cov=django_migrations_ci --cov-report term
python_files = tests.py test_*.py *_tests.py

[flake8]
max-line-length = 88

[aliases]
test=pytest
